[package]
name = "lib-terming"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.154"
serde_json = "1.0.94"
ndarray = {version = "0.15.6", features = ["serde"]}
crossterm = "0.26.1"
unicode-segmentation = "1.10.1"